--- a/reactportfolio/src/components/SideBar/sidebar.scss
+++ b/reactportfolio/src/components/SideBar/sidebar.scss
@@ -1,6 +1,6 @@
 .nav-bar {
     background: #181818;
-    width: 60px;
+    width: 90px;
     height: 100%;
     position: absolute;
     top: 0;
@@ -17,7 +17,7 @@
         width: 24px;
         height: auto;
   
-        &.sub-logo {
+        &.sub-title {
           width: 50px;
         }
       }
@@ -157,7 +157,7 @@
         z-index: 2;
         position: fixed;
   
-        &.mobile-show {
+        &.mobile-view {
           display: block;
         }
   
